--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -64,6 +64,17 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>2.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.positiondev.epublib</groupId>
+            <artifactId>epublib-core</artifactId>
+            <version>3.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.simplejavamail</groupId>
+            <artifactId>simple-java-mail</artifactId>
+            <version>8.6.3</version>
+        </dependency>
     </dependencies>
 
     <build>
