--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -75,6 +75,11 @@
             <artifactId>simple-java-mail</artifactId>
             <version>8.6.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
 
     <build>
